Project management improvement

--- a/src/templates/mailbody/welcome.html
+++ b/src/templates/mailbody/welcome.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-Hi {{ name }}, welcome to Metabolism of Cities!
+Hi {{ name }}, welcome to Metabolism of Islands! Your account was created successfully. Please let us know if you have any questions or feedback!
 
 {% endblock %}
