--- a/src/templates/optamos/login.html
+++ b/src/templates/optamos/login.html
@@ -41,7 +41,7 @@
         </p>
         <p>
         Don't have an account yet?
-        <a href="#">Create account</a>
+        <a href="{% url "optamos:account_create" %}">Create account</a>
       </p>
     </div>
   </div>
