--- a/src/core/static/css/optamos.input.css
+++ b/src/core/static/css/optamos.input.css
@@ -137,6 +137,9 @@
   main textarea {
     @apply w-full px-3 py-1.5 mt-1 border border-gray-300 rounded-lg focus:outline-hidden focus:ring-2 focus:ring-blue-500 bg-white;
   }
+  nav .active {
+    @apply border-sky-600 border-b-3;
+  }
 
 }
 
