--- a/src/templates/optamos/index.html
+++ b/src/templates/optamos/index.html
@@ -2,49 +2,62 @@
 
 {% block content %}
 
-{% if projects %}
+<hgroup>
+  <h1 class="mb-0">OPTamos</h1>
+  <h2 class="font-normal text-gray-700 mt-0 tracking-tighter">
+    Options for Participatory Transformation and Management of Sustainable land use
+  </h2>
+</hgroup>
 
-<h1>Your projects</h1>
+<p class="text-gray-600">
+  Short description of what this tool does? 
+  {% lorem 1 %}
+</p>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Date created</th>
-      <th>Options</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for each in projects %}
-    <tr>
-      <td><a href="{{ each.get_absolute_url }}">{{ each }}</a></td>
-      <td>{{ each.created_at }}</td>
-      <td>{{ each.created_at }}</td>
-    </tr>
-  {% endfor %}
-  </tbody>
-</table>
-
-<a href="{% url "optamos:create" %}" class="mt-5 btn-blue">Create new project</a>
-
-{% else %}
-
-<div class="text-center mt-20 mb-20">
-  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" aria-hidden="true" class="mx-auto size-12 text-gray-400">
-    <path d="M9 13h6m-3-3v6m-9 1V7a2 2 0 012-2h6l2 2h6a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2z" stroke-width="2" vector-effect="non-scaling-stroke" stroke-linecap="round" stroke-linejoin="round" />
-  </svg>
-  <h3 class="mt-2 text-sm font-semibold text-gray-900">No projects</h3>
-  <p class="mt-1 text-sm text-gray-500">Get started by creating a new project.</p>
-  <div class="mt-6">
-    <a href="{% url "optamos:create" %}" class="btn-blue">
-      <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="mr-1.5 -ml-0.5 size-5">
-        <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
+{% if request.user.is_authenticated %}
+  <div class="flex mt-20 mb-20 justify-center">
+    <div class="flex-1 text-center w-1/3 max-w-xs">
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" aria-hidden="true" class="mx-auto size-12 text-gray-400">
+        <path d="M9 13h6m-3-3v6m-9 1V7a2 2 0 012-2h6l2 2h6a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2z" stroke-width="2" vector-effect="non-scaling-stroke" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
-      New Project
-    </a>
-  </div>
-</div>
+      <p class="text-sm text-gray-500">Get started now!</p>
 
+      <div class="mt-4">
+        <a href="{% url "optamos:project_create" %}" class="btn-blue">
+          New project
+        </a>
+      </div>
+    </div>
+    <div class="flex-1 text-center w-1/3 max-w-xs">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960" class="mx-auto size-12 text-gray-400" fill="currentColor"><path d="M320-280q17 0 28.5-11.5T360-320q0-17-11.5-28.5T320-360q-17 0-28.5 11.5T280-320q0 17 11.5 28.5T320-280Zm0-160q17 0 28.5-11.5T360-480q0-17-11.5-28.5T320-520q-17 0-28.5 11.5T280-480q0 17 11.5 28.5T320-440Zm0-160q17 0 28.5-11.5T360-640q0-17-11.5-28.5T320-680q-17 0-28.5 11.5T280-640q0 17 11.5 28.5T320-600Zm120 320h240v-80H440v80Zm0-160h240v-80H440v80Zm0-160h240v-80H440v80ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"/></svg>
+      <p class="text-sm text-gray-500">Continue working on your existing projects</p>
+
+      <div class="mt-4">
+        <a href="{% url "optamos:projects" %}" class="btn-blue">
+          View projects
+        </a>
+      </div>
+    </div>
+  </div>
+
+  {% else %}
+
+  <div class="text-center mt-20 mb-20">
+
+    <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto size-12 text-gray-400" viewBox="0 -960 960 960" fill="currentColor"><path d="M720-400v-120H600v-80h120v-120h80v120h120v80H800v120h-80Zm-360-80q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM40-160v-112q0-34 17.5-62.5T104-378q62-31 126-46.5T360-440q66 0 130 15.5T616-378q29 15 46.5 43.5T680-272v112H40Zm80-80h480v-32q0-11-5.5-20T580-306q-54-27-109-40.5T360-360q-56 0-111 13.5T140-306q-9 5-14.5 14t-5.5 20v32Zm240-320q33 0 56.5-23.5T440-640q0-33-23.5-56.5T360-720q-33 0-56.5 23.5T280-640q0 33 23.5 56.5T360-560Zm0-80Zm0 400Z"/></svg>
+
+    <p class="text-sm text-gray-500">Get started now!</p>
+
+    <div class="mt-4">
+      <a href="{% url "optamos:project_create" %}" class="btn-blue">
+        <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="mr-1.5 -ml-0.5 size-5">
+          <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
+        </svg>
+        Create account
+      </a>
+    </div>
+  </div>
+    
 {% endif %}
 
 {% endblock %}
