--- a/src/templates/optamos/account.html
+++ b/src/templates/optamos/account.html
@@ -1,5 +1,9 @@
 {% extends "optamos/_base.html" %}
 
+{% block title %}
+  Create account
+{% endblock %}
+
 {% block content %}
 
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
