--- a/src/templates/optamos/index.html
+++ b/src/templates/optamos/index.html
@@ -1,5 +1,9 @@
 {% extends "optamos/_base.html" %}
 
+{% block title %}
+  Homepage
+{% endblock %}
+
 {% block content %}
 
 <hgroup>
@@ -41,20 +45,24 @@
   </div>
 
   {% else %}
-
-  <div class="text-center mt-20 mb-20">
-
-    <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto size-12 text-gray-400" viewBox="0 -960 960 960" fill="currentColor"><path d="M720-400v-120H600v-80h120v-120h80v120h120v80H800v120h-80Zm-360-80q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM40-160v-112q0-34 17.5-62.5T104-378q62-31 126-46.5T360-440q66 0 130 15.5T616-378q29 15 46.5 43.5T680-272v112H40Zm80-80h480v-32q0-11-5.5-20T580-306q-54-27-109-40.5T360-360q-56 0-111 13.5T140-306q-9 5-14.5 14t-5.5 20v32Zm240-320q33 0 56.5-23.5T440-640q0-33-23.5-56.5T360-720q-33 0-56.5 23.5T280-640q0 33 23.5 56.5T360-560Zm0-80Zm0 400Z"/></svg>
-
-    <p class="text-sm text-gray-500">Get started now!</p>
-
-    <div class="mt-4">
-      <a href="{% url "optamos:project_create" %}" class="btn-blue">
-        <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="mr-1.5 -ml-0.5 size-5">
-          <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
-        </svg>
-        Create account
-      </a>
+  <div class="flex mt-20 mb-20 justify-center">
+    <div class="flex-1 text-center w-1/3 max-w-xs">
+      <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto size-12 text-gray-400" viewBox="0 -960 960 960" fill="currentColor"><path d="M720-400v-120H600v-80h120v-120h80v120h120v80H800v120h-80Zm-360-80q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM40-160v-112q0-34 17.5-62.5T104-378q62-31 126-46.5T360-440q66 0 130 15.5T616-378q29 15 46.5 43.5T680-272v112H40Zm80-80h480v-32q0-11-5.5-20T580-306q-54-27-109-40.5T360-360q-56 0-111 13.5T140-306q-9 5-14.5 14t-5.5 20v32Zm240-320q33 0 56.5-23.5T440-640q0-33-23.5-56.5T360-720q-33 0-56.5 23.5T280-640q0 33 23.5 56.5T360-560Zm0-80Zm0 400Z"/></svg>
+      <p class="text-sm text-gray-500">Get started now!</p>
+      <div class="mt-4">
+        <a href="{% url "optamos:account_create" %}" class="btn-blue">
+          Create account
+        </a>
+      </div>
+    </div>
+      <div class="flex-1 text-center w-1/3 max-w-xs">
+      <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto size-12 text-gray-400" viewBox="0 -960 960 960" fill="currentColor"><path d="M481-120v-60h299v-600H481v-60h299q24 0 42 18t18 42v600q0 24-18 42t-42 18H481Zm-55-185-43-43 102-102H120v-60h363L381-612l43-43 176 176-174 174Z"/></svg>
+      <p class="text-sm text-gray-500">Already have an account?</p>
+      <div class="mt-4">
+        <a href="{% url "optamos:login" %}" class="btn-blue">
+          Log in
+        </a>
+      </div>
     </div>
   </div>
     
