--- a/src/templates/optamos/login.html
+++ b/src/templates/optamos/login.html
@@ -1,10 +1,14 @@
 {% extends "optamos/_base.html" %}
 
+{% block title %}
+  Log in
+{% endblock %}
+
 {% block content %}
 
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Sign in to your account</h2>
+    <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Log in to your account</h2>
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
@@ -31,7 +35,7 @@
       </div>
 
       <div>
-        <button type="submit" class="flex w-full justify-center btn-blue px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-600 cursor-pointer">Sign in</button>
+        <button type="submit" class="flex w-full justify-center btn-blue px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-600 cursor-pointer">Log in</button>
       </div>
     </form>
 
