--- a/src/templates/optamos/project.html
+++ b/src/templates/optamos/project.html
@@ -1,6 +1,10 @@
 {% extends "optamos/_base.html" %}
 {% load moc_extras %}
 
+{% block title %}
+  {{ project }}
+{% endblock %}
+
 {% block css %}
      <style>
       .slider input {
@@ -50,7 +54,7 @@
 
 
     <section id="criteria" class="pr-5">
-      <h2 class="text-xl">Criteria</h2>
+      <h2>Criteria</h2>
       {% if criteria_list %}
         <ul>
         {% for each in criteria_list %}
@@ -89,7 +93,7 @@
             {% endif %}
            ">
 
-            {% if criteria_values %}
+            {% if criteria_values == total_required_criteria_values %}
             <span class="flex size-6 shrink-0 items-center justify-center rounded-lg border border-gray-200 bg-lime-400 text-[0.625rem] font-medium {% if page == "rank_all_criteria" %}text-sky-600 border-sky-600{% else %}text-gray-400{% endif %} group-hover:border-sky-600 group-hover:text-sky-600">
               {% if not page == "rank_all_criteria" %}
                 <svg class="h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M530.8 134.1C545.1 144.5 548.3 164.5 537.9 178.8L281.9 530.8C276.4 538.4 267.9 543.1 258.5 543.9C249.1 544.7 240 541.2 233.4 534.6L105.4 406.6C92.9 394.1 92.9 373.8 105.4 361.3C117.9 348.8 138.2 348.8 150.7 361.3L252.2 462.8L486.2 141.1C496.6 126.8 516.6 123.6 530.9 134z"/></svg>
@@ -104,6 +108,12 @@
         </li>
 
         </ul>
+      {% else %}
+        <div class="alert alert-warning">
+          You need to configure criteria for your project.
+          <a href="{% url "optamos:project_settings" project.uid %}">Click here</a> to 
+          edit your project.
+        </div>
       {% endif %}
     </section>
 
@@ -153,27 +163,37 @@
         <h2 class="mb-8">{{ project.goal }}</h2>
       {% endif %}
 
-      <form method="post">
-        {% for option1, option2 in pairs %}
-          <section class="mb-10">
-            <div class="flex justify-between">
-              <span class="truncate w-2/5">{{ option1 }}</span>
-              <span class="truncate w-2/5 text-right">{{ option2 }}</span>
-            </div>
-            <div class="slider">
+      {% if not pairs %}
+        <div class="alert alert-warning">
+          You need to configure at least two 
+          {% if page == "rank_all_criteria" %}criteria{% else %}options{% endif %}
+          in your project.
+          <a href="{% url "optamos:project_settings" project.uid %}">Click here</a> to 
+          edit your project.
+        </div>
+      {% else %}
+        <form method="post">
+          {% for option1, option2 in pairs %}
+            <section class="mb-10">
+              <div class="flex justify-between">
+                <span class="truncate w-2/5">{{ option1 }}</span>
+                <span class="truncate w-2/5 text-right">{{ option2 }}</span>
+              </div>
+              <div class="slider">
 
-              {% with label="range-"|concat:option1.id|concat:"-"|concat:option2.id %}
-                <input name="{{ label }}" type="range" min="-9" max="9" value="{{ values|get_item:label|default_if_none:0 }}" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer accent-sky-500 hover:accent-sky-600 range range-lg range-primary">
-              {% endwith %}
-              <output class="block mt-2 text-center text-lg font-bold text-gray-900"></output>
-            </div>
-          </section>
-        {% endfor %}
-        {% csrf_token %}
-        <p class="flex justify-end">
-          <button type="submit" class="btn-green">Save &amp; next &raquo;</button>
-        </p>
-      </form>
+                {% with label="range-"|concat:option1.id|concat:"-"|concat:option2.id %}
+                  <input name="{{ label }}" type="range" min="-9" max="9" value="{{ values|get_item:label|default_if_none:0 }}" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer accent-sky-500 hover:accent-sky-600 range range-lg range-primary">
+                {% endwith %}
+                <output class="block mt-2 text-center text-lg font-bold text-gray-900"></output>
+              </div>
+            </section>
+          {% endfor %}
+          {% csrf_token %}
+          <p class="flex justify-end">
+            <button type="submit" class="btn-green">Save &amp; next &raquo;</button>
+          </p>
+        </form>
+      {% endif %}
 
     {% else %}
 
