--- a/src/templates/optamos/project.settings.html
+++ b/src/templates/optamos/project.settings.html
@@ -1,5 +1,9 @@
 {% extends "optamos/_base.html" %}
 
+{% block title %}
+  Edit project: {{ project }}
+{% endblock %}
+
 {% block content %}
 
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
@@ -14,7 +18,7 @@
       <div>
         <label for="name" class="block text-sm/6 font-medium text-gray-900">Project name</label>
         <div class="mt-2">
-          <input id="name" type="text" name="name" required  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-cyan-600 sm:text-sm/6" 
+          <input id="name" type="text" name="name" required  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-cyan-600" 
           value="{{ project.name }}" />
         </div>
       </div>
