--- a/src/templates/optamos/projects.html
+++ b/src/templates/optamos/projects.html
@@ -1,5 +1,9 @@
 {% extends "optamos/_base.html" %}
 
+{% block title %}
+  Projects
+{% endblock %}
+
 {% block content %}
 
 {% if projects %}
@@ -21,9 +25,16 @@
       <td><a href="{{ each.get_absolute_url }}">{{ each }}</a></td>
       <td class="text-sm">{{ each.date_created|date:"M d, Y" }}</td>
       <td class="text-sm">{{ each.date_updated|date:"M d, Y" }}</td>
-      <td>
-        <a class="btn-blue btn-sm" href="{{ each.get_absolute_url }}">Open project</a>
-        <a class="btn-blue btn-sm" href="{% url "optamos:project_settings" each.uid %}">Edit project</a>
+      <td class="flex justify-between">
+        <div>
+          <a class="btn-blue btn-sm" href="{{ each.get_absolute_url }}">Open project</a>
+          <a class="btn-blue btn-sm" href="{% url "optamos:project_settings" each.uid %}">Edit project</a>
+        </div>
+        <a href="?delete={{ each.uid }}" onclick="javascript:return confirm('Are you sure you want to delete this project?')" class="remove cursor-pointer ml-2 focus:outline-none focus:ring-2 focus:ring-red-500 hover:text-red-600">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor">
+            <path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/>
+          </svg>
+        </a>
       </td>
     </tr>
   {% endfor %}
