--- a/src/templates/optamos/project.html
+++ b/src/templates/optamos/project.html
@@ -6,40 +6,40 @@
 {% endblock %}
 
 {% block css %}
-     <style>
-      .slider input {
-        -webkit-appearance: none;
-        appearance: none;
-        height: 8px;
-        background: #e5e7eb;
-        border-radius: 9999px;
-        outline: none;
-      }
-      .slider input::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        width: 24px;
-        height: 24px;
-        background: #3b82f6;
-        border-radius: 50%;
-        cursor: pointer;
-        box-shadow: 0 2px 8px rgba(59, 130, 246, 0.3);
-      }
-      .slider input::-moz-range-thumb {
-        width: 24px;
-        height: 24px;
-        background: #3b82f6;
-        border-radius: 50%;
-        cursor: pointer;
-        border: none;
-        box-shadow: 0 2px 8px rgba(59, 130, 246, 0.3);
-      }
-      .slider input::-webkit-slider-runnable-track {
-        height: 8px;
-        background: #e5e7eb;
-        border-radius: 9999px;
-      }
-    </style> 
+  <style>
+  .slider input {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 8px;
+    background: #e5e7eb;
+    border-radius: 9999px;
+    outline: none;
+  }
+  .slider input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 24px;
+    height: 24px;
+    background: #3b82f6;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 2px 8px rgba(59, 130, 246, 0.3);
+  }
+  .slider input::-moz-range-thumb {
+    width: 24px;
+    height: 24px;
+    background: #3b82f6;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    box-shadow: 0 2px 8px rgba(59, 130, 246, 0.3);
+  }
+  .slider input::-webkit-slider-runnable-track {
+    height: 8px;
+    background: #e5e7eb;
+    border-radius: 9999px;
+  }
+  </style> 
 {% endblock %}
 
 {% block content %}
@@ -47,11 +47,10 @@
 <div class="flex">
   <div class="flex-1 border-r border-gray-200 py-10 relative">
 
-  <a href="{% url "optamos:project_settings" project.uid %}" class="absolute top-4 right-4 btn-white btn-sm">
-    <svg xmlns="http://www.w3.org/2000/svg" class="size-5" viewBox="0 -960 960 960" fill="currentColor"><path d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/></svg>
-    Edit project
-  </a>
-
+    <a href="{% url "optamos:project_settings" project.uid %}" class="absolute top-4 right-4 btn-white btn-sm">
+      <svg xmlns="http://www.w3.org/2000/svg" class="size-5" viewBox="0 -960 960 960" fill="currentColor"><path d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/></svg>
+      Edit project
+    </a>
 
     <section id="criteria" class="pr-5">
       <h2>Criteria</h2>
@@ -119,9 +118,9 @@
 
     <section class="mt-10" id="inconsistency">
       <h2>Results</h2>
-        <ul>
+        <ul class="pr-5">
           <li>
-            <a href="?results={{ each.id }}" 
+            <a href="{% url "optamos:project_results" project.uid %}" 
               class="group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold no-underline
               {% if page == "results" %}
                 text-white bg-sky-600 
@@ -133,9 +132,9 @@
             </a>
           </li>
           <li>
-            <a href="?analysis={{ each.id }}" 
+            <a href="{% url "optamos:project_sensitivity" project.uid %}" 
               class="group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold no-underline
-              {% if page == "results" %}
+              {% if page == "sensitivity" %}
                 text-white bg-sky-600 
               {% else %}
                 text-gray-700 hover:bg-gray-50 hover:text-sky-600 
@@ -195,7 +194,7 @@
         </form>
       {% endif %}
 
-    {% else %}
+    {% elif page == "home" %}
 
       <div class="bg-gray-100 shadow-sm sm:rounded-lg">
         <div class="px-4 py-5 sm:p-6">
@@ -216,6 +215,30 @@
         </div>
       </div>
 
+    {% elif page == "results" %}
+
+      <div class="relative h-20">
+        {% for each in criteria_list %}
+          {% if not each.is_done %}
+            <div class="alert alert-warning absolute">
+              <svg xmlns="http://www.w3.org/2000/svg" class="inline mr-1" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="m40-120 440-760 440 760H40Zm138-80h604L480-720 178-200Zm302-40q17 0 28.5-11.5T520-280q0-17-11.5-28.5T480-320q-17 0-28.5 11.5T440-280q0 17 11.5 28.5T480-240Zm-40-120h80v-200h-80v200Zm40-100Z"/></svg>
+              <strong class="mr-2">WARNING</strong>
+              The results are incomplete - not all information is entered yet.
+            </div>
+          {% endif %}
+        {% endfor %}
+
+        {% if criteria_values != total_required_criteria_values %}
+          <div class="alert alert-warning absolute">
+              <svg xmlns="http://www.w3.org/2000/svg" class="inline mr-1" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="m40-120 440-760 440 760H40Zm138-80h604L480-720 178-200Zm302-40q17 0 28.5-11.5T520-280q0-17-11.5-28.5T480-320q-17 0-28.5 11.5T440-280q0 17 11.5 28.5T480-240Zm-40-120h80v-200h-80v200Zm40-100Z"/></svg>
+              <strong class="mr-2">WARNING</strong>
+            The results are incomplete - not all information is entered yet.
+          </div>
+        {% endif %}
+      </div>
+
+      <div id="chart_criteria" style="width:100%;height: 400px;"></div>
+      <div id="chart_options" style="width:100%;height: 400px;"></div>
     {% endif %}
 
   </div>
@@ -226,6 +249,81 @@
 {% endblock %}
 
 {% block js %}
+
+{% if page == "results" %}
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@6.0.0/dist/echarts.min.js"></script>
+  <script type="text/javascript">
+    var chart_criteria = echarts.init(document.getElementById('chart_criteria'));
+    var criteria_config = {
+      title: {
+        text: 'Criteria importance'
+      },
+      xAxis: {
+        type: 'value'
+      },
+      yAxis: {
+        type: 'category',
+        data: [{% for each in criteria_list %}'{{ each|escapejs }}'{% if not forloop.last %},{% endif %}{% endfor %}]
+      },
+      series: [{
+        name: 'Criteria',
+        type: 'bar',
+        data: [{% for each in criteria_list %}{{ points_criteria|get_item:each }}{% if not forloop.last %},{% endif %}{% endfor %}],
+        showBackground: true,
+        backgroundStyle: {
+          color: 'rgba(220, 220, 220, 0.3)'
+        },
+        itemStyle: {
+          color: function(params) {
+            return new echarts.graphic.LinearGradient(0, 0, 0, 1, [
+              { offset: 0, color: '#0084d1' },
+              { offset: 0.5, color: '#0678ba' },
+              { offset: 1, color: '#0c6fa9' }
+            ]);
+          },
+          borderRadius: [0, 5, 5, 0]
+        }
+      }]
+    };
+    chart_criteria.setOption(criteria_config);
+
+    var chart_options = echarts.init(document.getElementById('chart_options'));
+    var options_config = {
+      title: {
+        text: 'Options'
+      },
+      xAxis: {
+        type: 'value'
+      },
+      yAxis: {
+        type: 'category',
+        data: [{% for each in project.options.all %}'{{ each|escapejs }}'{% if not forloop.last %},{% endif %}{% endfor %}]
+      },
+      series: [{
+        name: 'Option',
+        type: 'bar',
+        data: [{% for each in project.options.all %}{{ points_options|get_item:each }}{% if not forloop.last %},{% endif %}{% endfor %}],
+        showBackground: true,
+        backgroundStyle: {
+          color: 'rgba(220, 220, 220, 0.3)'
+        },
+        itemStyle: {
+          color: function(params) {
+            return new echarts.graphic.LinearGradient(0, 0, 0, 1, [
+              { offset: 0, color: '#ff6900' },
+              { offset: 0.5, color: '#e66810' },
+              { offset: 1, color: '#c8580a' }
+            ]);
+          },
+          borderRadius: [0, 5, 5, 0]
+        }
+      }]
+    };
+    chart_options.setOption(options_config);
+
+  </script>
+
+{% else %}
   <script type="text/javascript">
     $(function() {
       $(".slider").each(function() {
@@ -252,4 +350,5 @@
       });
     });
   </script>
+{% endif %}
 {% endblock %}
