--- a/src/templates/optamos/_base.html
+++ b/src/templates/optamos/_base.html
@@ -42,7 +42,7 @@
       </div> 
     </nav>
 
-    <div class="bg-violet-800 bg" style="background-image:url(/media/optamos/{{ bg }})">
+    <div class="bg" style="background-image:url(/media/optamos/{{ bg }})">
       <div class="overlay pb-32">
         <header class="py-10">
           <hgroup class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
