--- a/src/core/static/css/optamos.css
+++ b/src/core/static/css/optamos.css
@@ -35,10 +35,10 @@
     --color-cyan-800: oklch(45% 0.085 224.283);
     --color-sky-500: oklch(68.5% 0.169 237.323);
     --color-sky-600: oklch(58.8% 0.158 241.966);
+    --color-sky-700: oklch(50% 0.134 242.749);
     --color-blue-50: oklch(97% 0.014 254.604);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-700: oklch(48.8% 0.243 264.376);
-    --color-violet-800: oklch(43.2% 0.232 292.759);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
@@ -952,9 +952,6 @@
   }
   .bg-transparent {
     background-color: transparent;
-  }
-  .bg-violet-800 {
-    background-color: var(--color-violet-800);
   }
   .bg-white {
     background-color: var(--color-white);
