Consistency ratio refining

--- a/src/templates/_menu-islands.html
+++ b/src/templates/_menu-islands.html
@@ -33,6 +33,7 @@
     <a class="dropdown-item" href="/community/tools/">Tools</a>
     <a class="dropdown-item" href="/courses/">Online Courses</a>
     <a class="dropdown-item" href="/multimedia/">Multimedia</a>
+    <a class="dropdown-item" href="/about/hub-of-island-innovation/">Hubs of Island Innovation</a>
   </div>
 </li>
 
