Export to excel

--- a/src/templates/optamos/project.html
+++ b/src/templates/optamos/project.html
@@ -302,7 +302,7 @@
     </table>
 
     <div class="mt-5 p-5 bg-gray-100 flex justify-between">
-      <a class="btn btn-blue" href="">Excel data export</a>
+      <a class="btn btn-blue" href="?export=true">Excel data export</a>
       <a class="btn btn-blue" href="#full-details" id="view-details">View all calculations</a>
     </div>
 
